[package]
edition = "2021"
name = "aws-lambda-warm-cold"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.6.3"
lambda_http = "0.6.1"
lambda_runtime = "0.6.1"

tokio = {version = "1", features = ["full"]}
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1.2"
